# model_samples

./: .gitignore  README.md  pyproject.toml
demo/: kmeans_demo.ipynb  sgd_demo.ipynb  simple_sgd_demo.ipynb  torch_models_demo.ipynb
demo/data/: power-gb-train.tsv
src/model_samples/: kmeans.py  linreg.py  nn.py  sgd.py  utils.py
src/model_samples/numpy/: kmeans.py  logreg.py  nn.py  sgd.py
src/model_samples/torch/: nn.py  rnn.py  rnn_tagger.py
tests/: kmeans_tests.py  linreg_test.py  logreg_test.py  nn_tests.py
