[project]
name = "model-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "model-samples",
]

[tool.uv.sources]
model-samples = { workspace = true }
